# inspector

./: README.md  pyproject.toml
inspector/: __init__.py  inspector.py
